fix Note properites z-index

--- a/example-vault/pixel-banner-example/.obsidian/plugins/pexels-banner/styles.css
+++ b/example-vault/pixel-banner-example/.obsidian/plugins/pexels-banner/styles.css
@@ -28,6 +28,7 @@
 /* fix for banner image overlapping with note content */
 .pixel-banner-image ~ div {
     z-index: 1;
+    position: relative;
 }
 .cm-sizer .metadata-container,
 .markdown-preview-sizer .metadata-container {
